<resources>
    <string name="app_name">TourIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- Start of Left Swipe Menu-->
    <string name="camera">Capture Memories</string>
    <string name="gallery">Gallery</string>
    <string name="video">Make Video</string>
    <string name="videogallery">Video Gallery</string>
    <string name="fav">Favourite Attractions</string>
    <string name="oneday">1 Day Trip</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="title_activity_favourite">Favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_description">Description</string>
    <string name="title_activity_view_image">ViewImage</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- End of Left Swipe Menu-->


    <!-- Sign-in status messages -->
    <string name="guest">Guest Login</string>
    <string name="google_app_id">tourit-1274</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_pre">PreActivity</string>
    <string name="title_activity_attration_list">AttrationList</string>
    <string name="title_activity_fav_list">FavList</string>
    <string name="title_activity_attr_description">AttrDescription</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_one_day_trip">Map</string>
</resources>
