<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/videogallery" />
        <item
            android:id="@+id/favourite"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/fav" />
        <item
            android:id="@+id/onedaytrip"
            android:icon="@drawable/oneday"
            android:title="@string/oneday" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
